<resources>
    <string name="app_name">My Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dasboard">Beranda</string>
    <string name="Notes">Catatan</string>
    <string name="Schedule">Jadwal</string>
    <string name="Profile">Profil</string>
    <string name="About">Tentang</string>
    <string name="Logout">Keluar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pleaseLogin">Silahkan Login \ndengan akun Anda</string>
    <string name="userName">Username</string>
    <string name="Password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="login">Login</string>
    <string name="pleaseRegister">Silahkan buat akun</string>
    <string name="Name">Nama</string>
    <string name="NoHp">Telepon</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="Gender">Gender</string>
    <string name="greet">Selamat Datang</string>
    <string name="name">Jhon Doe</string>
    <string name="Date">Date</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="EmailAddress">jhondoe@gmail.com</string>
    <string name="PasswordHashed">************</string>
    <string name="AppAbout">safdhbldkfbjskfbvfsfvbk</string>
    <string name="content" />
    <string name="simpan">Simpan</string>

    <string-array name="day">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>


</resources>